# UE5DroneControl

./: .gitattributes  .gitignore  Cesium离线地图需求技术文档阅读清单.md  ClassDiagram.puml  DroneLinkMonitorSubsystem.cpp  DroneLinkMonitorSubsystem.h  FR-03-无人机信息面板UI开发指南.md  FR03-debug总结.md  PX4]  README.md  Run_UE5_Bridge.bat  SequenceDiagrams.md  SequenceDiagrams.puml  UE5 无人机通信接口与 Python 模拟器指南.md  UE5DroneControl.code-workspace  UE5DroneControl.sln  UE5DroneControl.uproject  UE5DroneControl需求文档.md  UE5]  UE5坐标转换说明.md  UE5姿态同步操作指南.md  UE编译故障排查.md  UE项目代码学习计划.md  UI原型搭建-零基础图文教程.md  check_topic_type.bat  drone_bridge_config.yaml  drone_data_bridge.py  latency_test.py  main2.py  multi_drone_config.yaml  requirements.txt  start_drone_bridge.bat  start_drone_bridge.sh  start_full_bridge.bat  start_multi_drones.py  ue_px4_bridge.py  ue_to_px4_bridge.py  update_header.ps1  update_header2.ps1  verify_px4_topics.bat  (+13 more)
.claude/: settings.local.json
BackEnd/: .gitignore  README.md  TEST_GUIDE.md  WEEK1_3_BACKEND_ACCEPTANCE.md  build_simple.bat  drone_bridge_config.yaml  mock_server.py  multi_controller_config.yaml  requirements.txt  run.bat  run.sh  ue_to_px4_config.yaml  vcpkg.json  开发文档.md
BackEnd(before)/: README.md  Run_Drone_Data_Bridge.bat  config.yaml  drone_data_bridge.py  multi_drone_data_bridge.py  multi_ue_controller.py  multi_ue_to_px4_launcher.py  run.bat  ue_to_px4_bridge.py
BackEnd(before)/cpp/: Makefile
BackEnd(before)/cpp/src/: config.hpp  main.cpp  models.hpp
BackEnd(before)/data/: drones.json
BackEnd(before)/mock_ue/: README.md  run.sh
BackEnd(before)/mock_ue/mock_ue/: app.py  state.py  ws_client.py
BackEnd(before)/mock_ue/samples/: patrol_single_drone.json  recon_two_drones.json
BackEnd/app/: config.py  main.py  models.py  registry.py  udp_stub.py  ws_manager.py
BackEnd/app/routers/: arrays.py  debug.py  drones.py
BackEnd/cpp/: run.bat  run.sh
BackEnd/cpp/src/: registry.hpp  udp_stub.hpp  ws_manager.hpp
BackEnd/data/: drones.json
BackEnd/execution/: execution_engine.cpp  execution_engine.h
Backend/: CHANGELOG.md  CMakeLists.txt  README.md  README_backend.md  TEST_GUIDE.md  build.bat  config.yaml  debug_cli.h  jetson_bridge.py  main.cpp  run_backend.bat  run_mock_ue_integration.bat  vcpkg.json
Backend/communication/: udp_receiver.cpp  udp_receiver.h  udp_sender.cpp  udp_sender.h
Backend/conversion/: assignment_solver.cpp  assignment_solver.h  coordinate_converter.cpp  coordinate_converter.h  gps_anchor_manager.cpp  gps_anchor_manager.h  quaternion_utils.cpp  quaternion_utils.h
Backend/core/: config_loader.cpp  config_loader.h  logger.h  types.h
Backend/data/: drones.json
Backend/drone/: command_queue.cpp  command_queue.h  drone_context.h  drone_manager.cpp  drone_manager.h  heartbeat_manager.cpp  heartbeat_manager.h  state_machine.cpp  state_machine.h
Backend/execution/: assembly_controller.cpp  assembly_controller.h  assembly_planner.cpp  assembly_planner.h  execution_engine.cpp  execution_engine.h
Backend/execution_legacy/: execution_engine.cpp  execution_engine.h
Backend/http/: http_server.cpp  http_server.h
Backend/storage/: video_metadata_store.cpp  video_metadata_store.h
Backend/tests/: integration_week3.py  run_mock_ue_integration.py  test_assembly_planner.cpp  test_command_queue.cpp  test_coordinate_converter.cpp  test_gps_anchor_manager.cpp  test_main.cpp  test_quaternion_utils.cpp  test_state_machine.cpp  test_video_metadata_store.cpp
Backend/tests/mock_ue/mock_ue/: http_client.py  state.py
Backend/tools/: mock_server.py  test_rotation.py
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: DroneEditUI_Test.uasset  DronePathManager.uasset  EditMap.umap  NewMap.umap  NewMap_HLOD0_Instancing.uasset  NewWidgetBlueprint.uasset
Content/BUAAMap/buaaMap/: None_areas_pedestrian.uasset  None_forest.uasset  Terrain.uasset  areas_pedestrian.uasset  forest.uasset  mat_roof.uasset  mat_terrain.uasset  mat_terrain_2.uasset  overlay.uasset  overlay_fixed.uasset  roof.uasset  wall.uasset
Content/CesiumSettings/CesiumIonServers/: CesiumIonSaaS.uasset
Content/Cursor/: M_Cursor.uasset
Content/DroneOps/Blueprints/: BP_DroneOpsPlayerController.uasset  BP_MultiDroneCharacter.uasset  BP_RealTimeDrone.uasset
Content/DroneOps/UI/: MainMenu.umap  (+21 more)
Content/Level/: BUAA_Map.umap  CesiumWorld.umap  DefaultMap.umap  EditMap.umap  MainMenu.umap  fr2.umap
Content/TopDown/: BUAA_Map.umap  CesiumWorld.umap  DefaultMap.umap  Lvl_TopDown.umap  MI_Colorway.uasset  NewWorld.umap  buaaMap.umap
Content/Variant_TwinStick/: M_Glow.uasset
Docs/: DroneInfoPanel_WBP_Setup.md  改动总结_视频窗与路径多选.md  预演与控制扩展需求说明.md
Docs/MediaMTX/: README.md  jetson_sfm_sync_env_check.sh  jetson_video_env_check.sh  mediamtx.yml  室内室外录制测试手册.md
Docs/VideoTest/: test.html
Jetson/: jetson_bridge.py  jetson_video_stream.py  test_jetson_bridge_protocol.py  test_jetson_video_stream.py  视频流与SfM同步采集说明.md  配置.md  配置2.md
Plugins/SimpleWe0e9acbcbf62aV6/: SimpleWebSocket.uplugin
Source/: UE5DroneControl.Target.cs  UE5DroneControlEditor.Target.cs
Source/UE5DroneControl/: DroneDiveComponent.cpp  DroneDiveComponent.h  MultiDroneCharacter.cpp  MultiDroneCharacter.h  MultiDroneManager.cpp  MultiDroneManager.h  MultiDronePlayerController.cpp  MultiDronePlayerController.h  RealTimeDroneReceiver.cpp  RealTimeDroneReceiver.h  UE5DroneControl.Build.cs  UE5DroneControl.cpp  UE5DroneControl.h  UE5DroneControlCharacter.cpp  UE5DroneControlCharacter.h  UE5DroneControlGameMode.cpp  UE5DroneControlGameMode.h  UE5DroneControlPlayerController.cpp  UE5DroneControlPlayerController.h
data/: drones.json
px4_msgs/: vehicle_odometry.py
px4_msgs_bak/: __init__.py
tools/: integration_week3.py  integration_week4.py  integration_week5.py  mock_server.py  simulate_telemetry.py
tools/MediaMTX/: KeepDrone1Online.ps1  ue-demo.yml
tools/mock_ue/: README.md  run.bat
ue_px4_msgs/: __init__.py  messages.py  packets.py  utils.py
(+1554 files in other folders)
